# HR-Assistant-Chatbot

./: README.md  hr_logic.py  ingest.py  ingest_employees.py  prepare_embeddings.py  project_setup_check.py  pyproject.toml  run_app.py  streamlit_app.py
employee_vectordb/: chroma.sqlite3
hr_vectordb/: chroma.sqlite3
