[project]
name = "hr-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "sqlalchemy>=2.0.46",
]
